# progressive_embedding

./: .gitignore  .gitmodules  CMakeLists.txt  Property.cpp  Property.h  README.md  convexation.cpp  convexation.h  count_flipped_elements.cpp  count_flipped_elements.h  decompose_polygon.cpp  decompose_polygon.h  dijkstra.cpp  dijkstra.h  edge_split.cpp  edge_split.h  embed_points.cpp  embed_points.h  fData.h  flipped_elements.cpp  flipped_elements.h  genus_zero_mapping.cpp  genus_zero_tutte.cpp  is_simple_polygon.cpp  is_simple_polygon.h  loader.cpp  loader.h  local_operation.cpp  local_operation.h  main.cpp  map_to_convex.cpp  matchmaker.cpp  matchmaker.h  mst.cpp  mst.h  path_tracing.cpp  path_tracing.h  plot.cpp  plot.h  process_ee.cpp  (+14 more)
cmake/: FindUmfpack.cmake  PEDependencies.cmake  PEDownloadExternal.cmake
cut_mesh/: cut_mesh_simple.cpp  cut_mesh_simple.h  edge_flaps.cpp  edge_flaps.h
local_smooth/: auto_grad.cpp  auto_grad.hpp  coloring_mesh.cpp  coloring_mesh.h  eigs.py  energy.cpp  energy.h  local_smooth.cpp  local_smooth.h
slim/: AtA_cached.cpp  AtA_cached.h  flip_avoiding_line_search.cpp  flip_avoiding_line_search.h  line_search.cpp  line_search.h  slice_cached.cpp  slice_cached.h  slim.cpp  slim.h  slim_lag.cpp  slim_lag.h  sparse_cached.cpp  sparse_cached.h
